# RobotManipulation_WS2013

./: CMakeLists.txt  README
include/: JointInterface.h  RobotInterface.h
include/vrep/: VRepJointInterface.h  VRepRobotInterface.h
scene/: youbot_arm.ttt  youbot_arm_debug.ttt  youbot_arm_test.ttt
src/: example.cpp  kdl_kinematic_solver_test.cpp
src/vrep/: VRepRobotInterface.cpp
